update flex-box justify-content : space-around, space-between.

--- a/justify-content/space-around/tutorial_flexbox13.html
+++ b/justify-content/space-around/tutorial_flexbox13.html
@@ -3,13 +3,12 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Justify-Content Property 3</title>
+    <title>Justify-Content Property 4</title>
     <style>
-      /* set justify-content: flex-end */
       .flex-container {
         display: flex;
-        justify-content: flex-end;
-        background: dodgerblue;
+        justify-content: space-around;
+        background-color: dodgerblue;
       }
       .flex-container > div {
         background-color: #f1f1f1;
@@ -22,10 +21,10 @@
     </style>
   </head>
   <body>
-    <!-- justify-content: flex-end -->
+    <!-- property justify-content: space-around -->
     <h1>The Justify-Content Property</h1>
-    <p>The "Justify-Content: flex-end;" aligns the flex-items at the end of the container:</p>
-    <!-- Parents Element -->
+    <p>The "justify-content: space-around;" displays the flex items with space before, between, and after the lines.</p>
+    <!-- parents element -->
     <div class="flex-container">
       <!-- child element -->
       <div>1</div>
