--- a/justify-content/space-between/tutorial_flexbox14.html
+++ b/justify-content/space-between/tutorial_flexbox14.html
@@ -3,13 +3,12 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Justify-Content Property 3</title>
+    <title>Justify-Content Property 5</title>
     <style>
-      /* set justify-content: flex-end */
       .flex-container {
         display: flex;
-        justify-content: flex-end;
-        background: dodgerblue;
+        justify-content: space-between;
+        background-color: dodgerblue;
       }
       .flex-container > div {
         background-color: #f1f1f1;
@@ -22,12 +21,11 @@
     </style>
   </head>
   <body>
-    <!-- justify-content: flex-end -->
-    <h1>The Justify-Content Property</h1>
-    <p>The "Justify-Content: flex-end;" aligns the flex-items at the end of the container:</p>
-    <!-- Parents Element -->
+    <!-- property justify-content: space-between -->
+    <h1>The Justify Content Property</h1>
+    <p>The "justify-content: space-between;" displays the flex-items with space between the lines:</p>
+    <!-- Parent Element -->
     <div class="flex-container">
-      <!-- child element -->
       <div>1</div>
       <div>2</div>
       <div>3</div>
